clusters/cl01tl/manifests/radarr-4k/HTTPRoute-radarr-4k.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-4k
  labels:
    app.kubernetes.io/instance: radarr-4k
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr-4k
    helm.sh/chart: radarr-4k-5.2.1
  namespace: radarr-4k
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "radarr-4k.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr-4k
          namespace: radarr-4k
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
